--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,13 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>com.mycompany.sistemaiq_gyn.SistemaIQ_GYN</exec.mainClass>
     </properties>
+    
+    <dependencies>
+    <!-- Outras dependências do seu projeto -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.28</version> <!-- Substitua pela versão mais recente disponível -->
+    </dependency>
+    </dependencies>
 </project>
